// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar should render correctly on left 1`] = `
<div
  className="sc-bdfBQB hVPydH"
  orientation="left"
>
  content
</div>
`;

exports[`Sidebar should render correctly on right 1`] = `
<div
  className="sc-bdfBQB jpUEof"
  orientation="right"
>
  content
</div>
`;
